--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Background"
-    >
-
+    android:background="@color/Background">
 
     <LinearLayout
         android:id="@+id/titleContainer"
@@ -13,17 +11,12 @@
         android:layout_centerHorizontal="true"
         android:orientation="vertical">
 
-
-
         <ImageView
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/linkedin"
-            />
-
+            android:src="@drawable/linkedin" />
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/formContainer"
@@ -35,14 +28,14 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/etEmail"
+            android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email Address"
             android:background="@drawable/rounded_edittext" />
 
         <EditText
-            android:id="@+id/etUsername"
+            android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
@@ -50,7 +43,7 @@
             android:layout_marginTop="10dp" />
 
         <EditText
-            android:id="@+id/etPassword"
+            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -60,7 +53,7 @@
             android:padding="10dp" />
 
         <EditText
-            android:id="@+id/etConfirmPassword"
+            android:id="@+id/editTextConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
@@ -68,11 +61,16 @@
             android:background="@drawable/rounded_edittext"
             android:layout_marginTop="10dp" />
 
+        <CheckBox
+            android:id="@+id/checkBoxPrivacyPolicy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="I agree to the Privacy Policy"
+            android:layout_marginTop="20dp" />
     </LinearLayout>
 
-
     <Button
-        android:id="@+id/btnSignUp"
+        android:id="@+id/buttonSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign up"
@@ -81,13 +79,12 @@
         android:layout_marginHorizontal="30dp"
         android:backgroundTint="@color/Blue" />
 
-
     <TextView
-        android:id="@+id/tvLoginLink"
+        android:id="@+id/textViewLoginPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account? Login"
-        android:layout_below="@id/btnSignUp"
+        android:layout_below="@id/buttonSignUp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textColor="@color/white" />
