--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,14 @@
         android:backgroundTint="@color/Blue"
         android:layout_below="@id/btnLogin"
         android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="30dp"
-         />
+        android:layout_marginHorizontal="30dp" />
+    <Button
+        android:id="@+id/Directbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Direct to Home page !"
+        android:backgroundTint="@color/Blue"
+        android:layout_below="@id/btnSignUp"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="30dp" />
 </RelativeLayout>
