--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="searchbar">#DDEAF7</color>
     <color name="Blue">#3574f0</color>
     <color name="Background">#5D6D7E</color>
+    <color name="gray">#888888</color>
+    <color name="colorAccentt">#FF4081</color> <!-- Replace with your accent color -->
+    <color name="colorPrimary">#FF6200EE</color>
+    <color name="colorPrimaryDark">#FF3700B3</color>
+    <color name="colorAccent">#FF03DAC5</color>
 </resources>
