--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -66,7 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="I agree to the Privacy Policy"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
     <Button
@@ -75,7 +76,7 @@
         android:layout_height="wrap_content"
         android:text="Sign up"
         android:layout_below="@id/formContainer"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"
         android:backgroundTint="@color/Blue" />
 
